# vs-boxblur

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: linux.yml  linux_ispc.yml  windows.yml  windows_ispc.yml
ispc/: CMakeLists.txt  boxblur.ispc  source.cpp
source/: internalfilters.h  source.cpp
